--- a/_sass/components/pebble-frame.scss
+++ b/_sass/components/pebble-frame.scss
@@ -33,8 +33,8 @@
     }
 
     .pebble-screen {
-        padding-top: 54%;
-        padding-bottom: 54%;
+        padding-top: 54.1%;
+        padding-bottom: 53.9%;
         padding-left: 23.5%;
         padding-right: 23%;
     }
